--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 data/ filter=lfs diff=lfs merge=lfs -text
+data/spanish-rap/spanish-rap.txt filter=lfs diff=lfs merge=lfs -text
+data/tiny-shakespeare/tiny-shakespeare.txt filter=lfs diff=lfs merge=lfs -text
